<?xml version="1.0"?>
<package format="2">
  <name>gazebo_plugins</name>
  <version>2.8.4</version>
  <description>
    Robot-independent Gazebo plugins for sensors, motors and dynamic reconfigurable components.
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD, Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>John Hsu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
