<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros</name>
  <version>3.7.0</version>
  <description>
    Utilities to interface with <a href="http://gazebosim.org">Gazebo</a> through ROS.
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>John Hsu</author>
  <author>Nate Koenig</author>
  <author>Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rmw</depend>
  <depend>std_srvs</depend>
  <depend>tinyxml_vendor</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-lxml</exec_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ros2run</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
