<package>
  <name>gazebo_ros_control</name>
  <version>0.2.0</version>
  <description>gazebo_ros_control</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/wiki/Tutorials#ROS_Integration</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_pkgs</url>

  <author>Dave Coleman, Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>controller_manager</build_depend>

  <run_depend>roscpp</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>controller_manager</run_depend> 

  <export>

  </export>
</package>
