<package>
  <name>gazebo_ros_control_examples</name>
  <version>0.1.0</version>
  <description>gazebo_ros_control_examples</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control_examples</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros_control_sim_interface</build_depend> 
  <build_depend>gazebo_ros_control_plugin</build_depend> 
  <build_depend>effort_controllers</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>hardware_interface</build_depend> 
  <run_depend>hardware_interface</run_depend> 
  <run_depend>gazebo_ros_control_sim_interface</run_depend> 
  <run_depend>gazebo_ros_control_plugin</run_depend> 
  <run_depend>effort_controllers</run_depend> 
  <run_depend>gazebo_ros</run_depend> 

  <export>
    <gazebo_ros_control_sim_interface plugin="${prefix}/robot_sim_plugins.xml"/>
  </export>
</package>
