<?xml version="1.0"?>
<package>
  <name>gazebo_ros_pkgs</name> <!-- This is a meta package! -->
  <version>2.3.5</version>
  <description>Interface for using ROS with the <a href="http://gazebosim.org/">Gazebo</a> simulator.</description>

  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD,LGPL,Apache 2.0</license>

  <url type="website">http://gazebosim.org/wiki/Tutorials#ROS_Integration</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_pkgs</url>

  <author>John Hsu, Nate Koenig, Dave Coleman</author>>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
