<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gazebo_ros_pkgs</name>
  <version>3.7.0</version>
  <description>Interface for using ROS with the <a href="http://gazebosim.org/">Gazebo</a> simulator.</description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <license>BSD,LGPL,Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>John Hsu</author>
  <author>Nate Koenig</author>
  <author>Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
