<?xml version="1.0"?>
<package>
  <name>gazebo_tests</name>
  <version>0.1.0</version>
  <description>Contains a variety of unit tests for gazebo, tools and plugins.</description>

  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <license>TODO</license>

  <author>John Hsu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <deprecated>This package will be removed in ROS-I. All tests have been moved to the gazebo_plugins package.</deprecated>
  </export>
</package>