<package>
  <name>ros_control_gazebo</name>
  <version>0.1.0</version>
  <description>ros_control_gazebo</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_control_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>hardware_interface</build_depend> 

  <run_depend>roscpp</run_depend> 
  <run_depend>gazebo</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>hardware_interface</run_depend> 

  <export>
    <cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/include"/>
  </export>
</package>
