<package>
  <name>ros_control_gazebo_tests</name>
  <version>0.1.0</version>
  <description>ros_control_gazebo_tests</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_control_gazebo_tests</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_gazebo</build_depend> 
  <build_depend>ros_control_gazebo_plugin</build_depend> 
  <build_depend>effort_controllers</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>hardware_interface</build_depend> 
  <run_depend>hardware_interface</run_depend> 
  <run_depend>ros_control_gazebo</run_depend> 
  <run_depend>ros_control_gazebo_plugin</run_depend> 
  <run_depend>effort_controllers</run_depend> 
  <run_depend>gazebo_ros</run_depend> 

  <export>
    <ros_control_gazebo plugin="${prefix}/robot_sim_plugins.xml"/>
  </export>
</package>
